--- a/content/resources/lect12_13.md
+++ b/content/resources/lect12_13.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Summary of the lecture covering Nonlinear Programming.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/1-731-water-resource-systems-fall-2006/de6f9a5c13039fbba129b981f1c677f5_lect12_13.pdf
 file_type: application/pdf
+parent_uid: 436f803d-aafd-e037-4181-b5d176483fc4
 resourcetype: Document
 title: lect12_13.pdf
 uid: de6f9a5c-1303-9fbb-a129-b981f1c677f5
