--- a/content/resources/lect19_20.md
+++ b/content/resources/lect19_20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Summary of the lecture covering Real-Time Optimization, Dynamic Programming.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/1-731-water-resource-systems-fall-2006/c0b1c469bdcd694ed5258ed7f8571caa_lect19_20.pdf
 file_type: application/pdf
+parent_uid: 436f803d-aafd-e037-4181-b5d176483fc4
 resourcetype: Document
 title: lect19_20.pdf
 uid: c0b1c469-bdcd-694e-d525-8ed7f8571caa
